--- a/bin/install
+++ b/bin/install
@@ -54,21 +54,22 @@ install_typescript () {
     local allow_extras=0
     local major_version=$(echo $version | cut -d "." -f1)
 
-    echo "$install_type"
-    echo "$version"
-    echo "$install_path"
-    echo "$platform"
-    echo "$arch"
-    echo "$tempdir"
-    echo "$allow_extras"
-    echo "$major_version"
+    if [ $major_version -lt "2" ]; then
+        allow_extras=1
+    fi
+
+    echo "Install Type = $install_type"
+    echo "Version = $version"
+    echo "Install Path = $install_path"
+    echo "Platform = $platform"
+    echo "Arch = $arch"
+    echo "Temp Dir = $tempdir"
+    echo "Allow Extras = $allow_extras"
+    echo "Major Version = $major_version"
 
     set -e
     mkdir -p "$install_path"
 
-    if [ $major_version -lt "2" ]; then
-        allow_extras=1
-    fi
 
     # install the sdk
     URL="https://storage.googleapis.com/typescript-archive/channels/stable/release/${version}/sdk/typescriptsdk-${platform}-${arch}-release.zip"
@@ -108,7 +109,7 @@ install_typescript () {
             # content_shell should already be available without making an explicit link
         fi
     fi
-
+    echo "Removing temporary Files"
     rm -rf "${tempdir}"
 }
 
